Changelog
=========

HEAD
~~~~

- Do not fix-up self-closing tags if an XML declaration is present
  without a DOCTYPE. [malthe]

- Prefix tags which do not belong to the default namespace. [malthe]

1.0b10 (released 24/11/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Do not apply namespace attribute 'xmlns' to root element if not
  set. [malthe]

- Fixed tuple unpacking in repeat loops. [malthe]

- Use a custom simple BufferIO class for the lxml.etree parser instead of
  standard StringIO. [hannosch]

- This was the wrong fix, however; what needed to be changed is that
  the class of the marker isntance must be available at
  module-scope. [malthe]

- Changed generation.marker back to a normal object instance. Otherwise we get
  PicklingError: Can't pickle <class 'chameleon.core.generation.marker'>:
  it's not the same object as chameleon.core.generation.marker. [hannosch]

- Changed two isinstance checks to check for basestring instead of str or
  unicode. [hannosch]

1.0b9 (released 19/11/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added ``label`` property to expressions; this allows providing a
  human-readable label for values that are going to
  evaluated. [malthe]

- Normalize METAL slot names to ensure they're valid Python variable
  names. Non-valid characters are converted to underscore. [malthe]

- Renamed dynamic scope variable to `econtext` in order to reduce
  compatibility issues with ZPT. [malthe]

- Fixed issue where multiple defines would cause integrity
  issues. [malthe]

- Avoid self-closing tags that are not allowed in transitional
  HTML. [malthe]

- Use custom serialization method to serialize static default
  translation blocks; we can't rely on `lxml` for sane
  output. [malthe]

- Make `default` symbol available to dynamic attribute
  evaluations. [malthe]

- Visit evaluation before assignment in order to support assignments
  that rely on the same name in the dynamic variable scope. [malthe]
